<resources>
    <string name="app_name">TubesImage</string>
    <string name="detect_text">Detect Text</string>
    <string name="todo">TODO</string>
    <string name="reset">reset</string>
    <string name="translate">translate</string>
    <string name="japanese">日本人</string>
    <string name="english">ENGLISH</string>
    <string name="translate_ocr">Translate OCR</string>
    <string name="type_the_text_to_translate">Type the text to translate</string>
    <string name="Switch">switch</string>
    <string name="back">Back</string>
    <string name="API_KEY">trnsl.1.1.20170425T085917Z.580fec9ed721d387.9caf5bd2514ca1581b95de321974dce826ef5064</string>
</resources>
